fix: footer image size on safari

--- a/css/style.css
+++ b/css/style.css
@@ -1044,11 +1044,14 @@ font-weight: 600;
 font-family: "Muli", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
+
 .branding-authorized-logo {
-min-width: 50px;
-max-width: 100px;
-margin-right: 3px;
+    object-fit: contain;
+    margin-right: 3px;
+    width: 120px;
+    height: 78px;
 }
+
 
 .branding-authorized-logo-bct {
 min-width: 140px;
@@ -1295,13 +1298,11 @@ background-image: url("../img/blahblah-min.jpg");
 }
 .branding-authorized-logo-viettelpost, .branding-authorized-logo-giaohangtietkiem {
     width: 100%;
-    min-width: 100px;
-    max-width: 120px;
+    min-width: 120px;
 }
 .branding-authorized-logo-vipost {
     width: 100%;
     min-width: 100px;
-    max-width: 120px;
 }
 
 /*Custom video player*/
